[gd_scene load_steps=4 format=3 uid="uid://biwluetnyihce"]

[ext_resource type="Script" path="res://Waffen/BaseRangeWeapon.gd" id="2_7dul5"]

[sub_resource type="Animation" id="Animation_b6x46"]
resource_name = "muzzle_flash"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.3, 0.3), Vector2(0.45, 0.25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_du83a"]
_data = {
"muzzle_flash": SubResource("Animation_b6x46")
}

[node name="BaseRangeWeapon" type="Sprite2D"]
scale = Vector2(0.45, 0.45)
offset = Vector2(-71.6746, -436.055)
script = ExtResource("2_7dul5")
fire_rate = 0.75
bullet_damage = 2.0
weapon_range = 350

[node name="GunPoint" type="Node2D" parent="."]
position = Vector2(437.951, -31.6188)

[node name="MuzzleFlash" type="Sprite2D" parent="."]
position = Vector2(682.717, -44.6754)
scale = Vector2(0.3, 0.3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_du83a")
}

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="gunShot" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout" flags=18]
